test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/with-multiple-exceptions/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: CELPolicyException
metadata:
  name: check-deployment-name
spec:
  policyRefs:
  - name: "check-deployment-labels"
    kind: ValidatingPolicy
  matchConditions:
    - name: "check-name"
      expression: "object.metadata.name == 'skipped-deployment'"
---
apiVersion: policies.kyverno.io/v1alpha1
kind: CELPolicyException
metadata:
  name: check-deployment-namespace
spec:
  policyRefs:
  - name: "check-deployment-labels"
    kind: ValidatingPolicy
  matchConditions:
    - name: "check-namespace"
      expression: "namespaceObject.metadata.name == 'testing-ns'"
