test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/with-multiple-exceptions/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: vpol-check-deployment-labels
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: check-deployment-labels
spec:
  failurePolicy: Fail
  (matchConditions[?name == 'check-name']):
  - expression: '!(object.metadata.name == ''skipped-deployment'')'
  (matchConditions[?name == 'check-namespace']):
  - expression: '!(namespaceObject.metadata.name == ''testing-ns'')'
  matchConstraints:
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - deployments
  variables:
  - expression: has(object.metadata.labels) && 'env' in object.metadata.labels &&
      object.metadata.labels['env'] == 'prod'
    name: environment
  validations:
  - expression: variables.environment == true
    message: Deployment labels must be env=prod
