test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/with-multiple-exceptions/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: with-multiple-exceptions
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-generated-vap-ready.yaml
      with:
        bindings:
        - name: name
          value: check-deployment-labels
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: check validatingadmissionpolicy
    try:
    - assert:
        file: validatingadmissionpolicy.yaml
  - name: check validatingadmissionpolicybinding
    try:
    - assert:
        file: validatingadmissionpolicybinding.yaml
  - name: check validatingwebhookconfiguration
    try:
    - assert:
        file: validatingwebhookconfiguration.yaml
